# anchor-arch-example

./: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml
arch/tests/: Cargo.toml
arch/tests/src/: common.rs  initialize_program.rs  lib.rs
programs/test/: Cargo.toml
programs/test/src/: lib.rs
tests/: test.ts
