[package]
name = "arch-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { version = "0.5.5"}
arch_sdk = { version = "0.5.5"}
# arch_test_sdk = "0.5.2"
# borsh = { version = "^0.10.3"}
borsh = { version = "1.4.0" }
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
rstest = "0.18"
serial_test = "3.0"
