[package]
name = "arch-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# arch_program = { git = "https://github.com/SaturnBTC/satellite.git", branch = "satellite", package = "arch_program" }
arch_program = { version = "0.5.11" }
arch_sdk = { version = "0.5.11" }
borsh = { version = "1.4.0" }
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
rstest = "0.18"
serial_test = "3.0"