[package]
name = "test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test"

[features]
default = ["arch"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
arch = ["satellite-lang"]

[dependencies]
anchor-lang = { version = "0.31.1", optional = true }
satellite-lang = { git = "https://github.com/SaturnBTC/satellite.git", branch = "satellite", package = "satellite-lang", optional = true }

