[package]
name = "test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
arch_program = { version = "0.5.11" }
# satellite-lang = { git = "https://github.com/SaturnBTC/satellite.git", branch = "satellite", package = "satellite-lang", optional = true }
# satellite-lang = { git = "ssh://git@github.com/SaturnBTC/whirlpools.git", branch = "main", package = "satellite-lang", optional = true }
satellite-lang = { version = "0.31.1" }

